// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SPFx Template Scaffolding Template scaffolding and comparison should scaffold ace-data-visualization template and match example output: stdout 1`] = `
"Adding local template source: <LOCAL_TEMPLATE_PATH>
# of templates: 17
Template Name: ace-data-visualization
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Data Visualization
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-generic-card
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Generic Card Template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-generic-image-card
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Image Card Template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-generic-primarytext-card
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Primary Text Card Template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-search-card
Category: ace
Description: Adaptive Card Extension with Search Card template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: extension-application-customizer
Category: extension
Description: A SharePoint Framework Application Customizer extension template
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 22

Template Name: extension-fieldcustomizer-minimal
Category: extension
Description: A minimal Field Customizer extension for SharePoint Framework without any framework dependencies
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 22

Template Name: extension-fieldcustomizer-noframework
Category: extension
Description: A SharePoint Framework field customizer extension with no framework
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 22

Template Name: extension-fieldcustomizer-react
Category: extension
Description: SharePoint Framework Field Customizer extension with React framework
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 23

Template Name: extension-formcustomizer-noframework
Category: extension
Description: A SharePoint Framework Form Customizer extension with no framework
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 21

Template Name: extension-formcustomizer-react
Category: extension
Description: A SharePoint Framework Form Customizer extension with React
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 20

Template Name: extension-listviewcommandset
Category: extension
Description: SharePoint Framework list view command set extension template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 24

Template Name: extension-search-query-modifier
Category: extension
Description: A SharePoint Framework search query modifier extension
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 22

Template Name: library
Category: library
Description: A SharePoint Framework Library Component
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 21

Template Name: webpart-minimal
Category: webpart
Description: A minimal web part template (no framework) for SPFx
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 23

Template Name: webpart-noframework
Category: webpart
Description: A web part template with no framework (plain TypeScript) for SPFx
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 26

Template Name: webpart-react
Category: webpart
Description: A React-based web part template for SPFx
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 27

targetDir: <TARGET_DIR>

[cyan]The following files will be modified:[default]
[yellow]Modified: .eslintrc.js[default]
[yellow]Modified: .gitignore[default]
[yellow]Modified: .npmignore[default]
[yellow]Modified: .vscode/launch.json[default]
[yellow]Modified: .vscode/settings.json[default]
[yellow]Modified: README.md[default]
[yellow]Modified: config/config.json[default]
[yellow]Modified: config/deploy-azure-storage.json[default]
[yellow]Modified: config/package-solution.json[default]
[yellow]Modified: config/rig.json[default]
[yellow]Modified: config/sass.json[default]
[yellow]Modified: config/serve.json[default]
[yellow]Modified: config/typescript.json[default]
[yellow]Modified: config/write-manifests.json[default]
[yellow]Modified: package.json[default]
[yellow]Modified: src/adaptiveCardExtensions/dataVisualization/DataVisualizationAdaptiveCardExtension.manifest.json[default]
[yellow]Modified: src/adaptiveCardExtensions/dataVisualization/DataVisualizationAdaptiveCardExtension.ts[default]
[yellow]Modified: src/adaptiveCardExtensions/dataVisualization/DataVisualizationPropertyPane.ts[default]
[yellow]Modified: src/adaptiveCardExtensions/dataVisualization/assets/MicrosoftLogo.png[default]
[yellow]Modified: src/adaptiveCardExtensions/dataVisualization/cardView/CardView.ts[default]
[yellow]Modified: src/adaptiveCardExtensions/dataVisualization/loc/en-us.js[default]
[yellow]Modified: src/adaptiveCardExtensions/dataVisualization/loc/mystring.d.ts[default]
[yellow]Modified: src/adaptiveCardExtensions/dataVisualization/quickView/QuickView.ts[default]
[yellow]Modified: src/adaptiveCardExtensions/dataVisualization/quickView/template/QuickViewTemplate.json[default]
[yellow]Modified: tsconfig.json[default]

"
`;

exports[`SPFx Template Scaffolding Template scaffolding and comparison should scaffold ace-generic-card template and match example output: stdout 1`] = `
"Adding local template source: <LOCAL_TEMPLATE_PATH>
# of templates: 17
Template Name: ace-data-visualization
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Data Visualization
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-generic-card
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Generic Card Template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-generic-image-card
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Image Card Template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-generic-primarytext-card
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Primary Text Card Template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-search-card
Category: ace
Description: Adaptive Card Extension with Search Card template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: extension-application-customizer
Category: extension
Description: A SharePoint Framework Application Customizer extension template
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 22

Template Name: extension-fieldcustomizer-minimal
Category: extension
Description: A minimal Field Customizer extension for SharePoint Framework without any framework dependencies
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 22

Template Name: extension-fieldcustomizer-noframework
Category: extension
Description: A SharePoint Framework field customizer extension with no framework
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 22

Template Name: extension-fieldcustomizer-react
Category: extension
Description: SharePoint Framework Field Customizer extension with React framework
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 23

Template Name: extension-formcustomizer-noframework
Category: extension
Description: A SharePoint Framework Form Customizer extension with no framework
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 21

Template Name: extension-formcustomizer-react
Category: extension
Description: A SharePoint Framework Form Customizer extension with React
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 20

Template Name: extension-listviewcommandset
Category: extension
Description: SharePoint Framework list view command set extension template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 24

Template Name: extension-search-query-modifier
Category: extension
Description: A SharePoint Framework search query modifier extension
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 22

Template Name: library
Category: library
Description: A SharePoint Framework Library Component
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 21

Template Name: webpart-minimal
Category: webpart
Description: A minimal web part template (no framework) for SPFx
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 23

Template Name: webpart-noframework
Category: webpart
Description: A web part template with no framework (plain TypeScript) for SPFx
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 26

Template Name: webpart-react
Category: webpart
Description: A React-based web part template for SPFx
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 27

targetDir: <TARGET_DIR>

[cyan]The following files will be modified:[default]
[yellow]Modified: .eslintrc.js[default]
[yellow]Modified: .gitignore[default]
[yellow]Modified: .npmignore[default]
[yellow]Modified: .vscode/launch.json[default]
[yellow]Modified: .vscode/settings.json[default]
[yellow]Modified: README.md[default]
[yellow]Modified: config/config.json[default]
[yellow]Modified: config/deploy-azure-storage.json[default]
[yellow]Modified: config/package-solution.json[default]
[yellow]Modified: config/rig.json[default]
[yellow]Modified: config/sass.json[default]
[yellow]Modified: config/serve.json[default]
[yellow]Modified: config/typescript.json[default]
[yellow]Modified: config/write-manifests.json[default]
[yellow]Modified: package.json[default]
[yellow]Modified: src/adaptiveCardExtensions/genericCard/GenericCardAdaptiveCardExtension.manifest.json[default]
[yellow]Modified: src/adaptiveCardExtensions/genericCard/GenericCardAdaptiveCardExtension.ts[default]
[yellow]Modified: src/adaptiveCardExtensions/genericCard/GenericCardPropertyPane.ts[default]
[yellow]Modified: src/adaptiveCardExtensions/genericCard/assets/MicrosoftLogo.png[default]
[yellow]Modified: src/adaptiveCardExtensions/genericCard/cardView/CardView.ts[default]
[yellow]Modified: src/adaptiveCardExtensions/genericCard/loc/en-us.js[default]
[yellow]Modified: src/adaptiveCardExtensions/genericCard/loc/mystring.d.ts[default]
[yellow]Modified: src/adaptiveCardExtensions/genericCard/quickView/QuickView.ts[default]
[yellow]Modified: src/adaptiveCardExtensions/genericCard/quickView/template/QuickViewTemplate.json[default]
[yellow]Modified: tsconfig.json[default]

"
`;

exports[`SPFx Template Scaffolding Template scaffolding and comparison should scaffold ace-generic-image-card template and match example output: stdout 1`] = `
"Adding local template source: <LOCAL_TEMPLATE_PATH>
# of templates: 17
Template Name: ace-data-visualization
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Data Visualization
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-generic-card
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Generic Card Template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-generic-image-card
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Image Card Template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-generic-primarytext-card
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Primary Text Card Template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-search-card
Category: ace
Description: Adaptive Card Extension with Search Card template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: extension-application-customizer
Category: extension
Description: A SharePoint Framework Application Customizer extension template
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 22

Template Name: extension-fieldcustomizer-minimal
Category: extension
Description: A minimal Field Customizer extension for SharePoint Framework without any framework dependencies
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 22

Template Name: extension-fieldcustomizer-noframework
Category: extension
Description: A SharePoint Framework field customizer extension with no framework
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 22

Template Name: extension-fieldcustomizer-react
Category: extension
Description: SharePoint Framework Field Customizer extension with React framework
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 23

Template Name: extension-formcustomizer-noframework
Category: extension
Description: A SharePoint Framework Form Customizer extension with no framework
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 21

Template Name: extension-formcustomizer-react
Category: extension
Description: A SharePoint Framework Form Customizer extension with React
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 20

Template Name: extension-listviewcommandset
Category: extension
Description: SharePoint Framework list view command set extension template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 24

Template Name: extension-search-query-modifier
Category: extension
Description: A SharePoint Framework search query modifier extension
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 22

Template Name: library
Category: library
Description: A SharePoint Framework Library Component
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 21

Template Name: webpart-minimal
Category: webpart
Description: A minimal web part template (no framework) for SPFx
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 23

Template Name: webpart-noframework
Category: webpart
Description: A web part template with no framework (plain TypeScript) for SPFx
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 26

Template Name: webpart-react
Category: webpart
Description: A React-based web part template for SPFx
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 27

targetDir: <TARGET_DIR>

[cyan]The following files will be modified:[default]
[yellow]Modified: .eslintrc.js[default]
[yellow]Modified: .gitignore[default]
[yellow]Modified: .npmignore[default]
[yellow]Modified: .vscode/launch.json[default]
[yellow]Modified: .vscode/settings.json[default]
[yellow]Modified: README.md[default]
[yellow]Modified: config/config.json[default]
[yellow]Modified: config/deploy-azure-storage.json[default]
[yellow]Modified: config/package-solution.json[default]
[yellow]Modified: config/rig.json[default]
[yellow]Modified: config/sass.json[default]
[yellow]Modified: config/serve.json[default]
[yellow]Modified: config/typescript.json[default]
[yellow]Modified: config/write-manifests.json[default]
[yellow]Modified: package.json[default]
[yellow]Modified: src/adaptiveCardExtensions/genericImage/GenericImageAdaptiveCardExtension.manifest.json[default]
[yellow]Modified: src/adaptiveCardExtensions/genericImage/GenericImageAdaptiveCardExtension.ts[default]
[yellow]Modified: src/adaptiveCardExtensions/genericImage/GenericImagePropertyPane.ts[default]
[yellow]Modified: src/adaptiveCardExtensions/genericImage/assets/MicrosoftLogo.png[default]
[yellow]Modified: src/adaptiveCardExtensions/genericImage/cardView/CardView.ts[default]
[yellow]Modified: src/adaptiveCardExtensions/genericImage/loc/en-us.js[default]
[yellow]Modified: src/adaptiveCardExtensions/genericImage/loc/mystring.d.ts[default]
[yellow]Modified: src/adaptiveCardExtensions/genericImage/quickView/QuickView.ts[default]
[yellow]Modified: src/adaptiveCardExtensions/genericImage/quickView/template/QuickViewTemplate.json[default]
[yellow]Modified: tsconfig.json[default]

"
`;

exports[`SPFx Template Scaffolding Template scaffolding and comparison should scaffold ace-generic-primarytext-card template and match example output: stdout 1`] = `
"Adding local template source: <LOCAL_TEMPLATE_PATH>
# of templates: 17
Template Name: ace-data-visualization
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Data Visualization
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-generic-card
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Generic Card Template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-generic-image-card
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Image Card Template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-generic-primarytext-card
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Primary Text Card Template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-search-card
Category: ace
Description: Adaptive Card Extension with Search Card template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: extension-application-customizer
Category: extension
Description: A SharePoint Framework Application Customizer extension template
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 22

Template Name: extension-fieldcustomizer-minimal
Category: extension
Description: A minimal Field Customizer extension for SharePoint Framework without any framework dependencies
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 22

Template Name: extension-fieldcustomizer-noframework
Category: extension
Description: A SharePoint Framework field customizer extension with no framework
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 22

Template Name: extension-fieldcustomizer-react
Category: extension
Description: SharePoint Framework Field Customizer extension with React framework
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 23

Template Name: extension-formcustomizer-noframework
Category: extension
Description: A SharePoint Framework Form Customizer extension with no framework
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 21

Template Name: extension-formcustomizer-react
Category: extension
Description: A SharePoint Framework Form Customizer extension with React
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 20

Template Name: extension-listviewcommandset
Category: extension
Description: SharePoint Framework list view command set extension template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 24

Template Name: extension-search-query-modifier
Category: extension
Description: A SharePoint Framework search query modifier extension
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 22

Template Name: library
Category: library
Description: A SharePoint Framework Library Component
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 21

Template Name: webpart-minimal
Category: webpart
Description: A minimal web part template (no framework) for SPFx
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 23

Template Name: webpart-noframework
Category: webpart
Description: A web part template with no framework (plain TypeScript) for SPFx
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 26

Template Name: webpart-react
Category: webpart
Description: A React-based web part template for SPFx
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 27

targetDir: <TARGET_DIR>

[cyan]The following files will be modified:[default]
[yellow]Modified: .eslintrc.js[default]
[yellow]Modified: .gitignore[default]
[yellow]Modified: .npmignore[default]
[yellow]Modified: .vscode/launch.json[default]
[yellow]Modified: .vscode/settings.json[default]
[yellow]Modified: README.md[default]
[yellow]Modified: config/config.json[default]
[yellow]Modified: config/deploy-azure-storage.json[default]
[yellow]Modified: config/package-solution.json[default]
[yellow]Modified: config/rig.json[default]
[yellow]Modified: config/sass.json[default]
[yellow]Modified: config/serve.json[default]
[yellow]Modified: config/typescript.json[default]
[yellow]Modified: config/write-manifests.json[default]
[yellow]Modified: package.json[default]
[yellow]Modified: src/adaptiveCardExtensions/genericPrimaryText/GenericPrimaryTextAdaptiveCardExtension.manifest.json[default]
[yellow]Modified: src/adaptiveCardExtensions/genericPrimaryText/GenericPrimaryTextAdaptiveCardExtension.ts[default]
[yellow]Modified: src/adaptiveCardExtensions/genericPrimaryText/GenericPrimaryTextPropertyPane.ts[default]
[yellow]Modified: src/adaptiveCardExtensions/genericPrimaryText/assets/MicrosoftLogo.png[default]
[yellow]Modified: src/adaptiveCardExtensions/genericPrimaryText/cardView/CardView.ts[default]
[yellow]Modified: src/adaptiveCardExtensions/genericPrimaryText/loc/en-us.js[default]
[yellow]Modified: src/adaptiveCardExtensions/genericPrimaryText/loc/mystring.d.ts[default]
[yellow]Modified: src/adaptiveCardExtensions/genericPrimaryText/quickView/QuickView.ts[default]
[yellow]Modified: src/adaptiveCardExtensions/genericPrimaryText/quickView/template/QuickViewTemplate.json[default]
[yellow]Modified: tsconfig.json[default]

"
`;

exports[`SPFx Template Scaffolding Template scaffolding and comparison should scaffold ace-search-card template and match example output: stdout 1`] = `
"Adding local template source: <LOCAL_TEMPLATE_PATH>
# of templates: 17
Template Name: ace-data-visualization
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Data Visualization
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-generic-card
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Generic Card Template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-generic-image-card
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Image Card Template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-generic-primarytext-card
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Primary Text Card Template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-search-card
Category: ace
Description: Adaptive Card Extension with Search Card template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: extension-application-customizer
Category: extension
Description: A SharePoint Framework Application Customizer extension template
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 22

Template Name: extension-fieldcustomizer-minimal
Category: extension
Description: A minimal Field Customizer extension for SharePoint Framework without any framework dependencies
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 22

Template Name: extension-fieldcustomizer-noframework
Category: extension
Description: A SharePoint Framework field customizer extension with no framework
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 22

Template Name: extension-fieldcustomizer-react
Category: extension
Description: SharePoint Framework Field Customizer extension with React framework
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 23

Template Name: extension-formcustomizer-noframework
Category: extension
Description: A SharePoint Framework Form Customizer extension with no framework
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 21

Template Name: extension-formcustomizer-react
Category: extension
Description: A SharePoint Framework Form Customizer extension with React
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 20

Template Name: extension-listviewcommandset
Category: extension
Description: SharePoint Framework list view command set extension template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 24

Template Name: extension-search-query-modifier
Category: extension
Description: A SharePoint Framework search query modifier extension
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 22

Template Name: library
Category: library
Description: A SharePoint Framework Library Component
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 21

Template Name: webpart-minimal
Category: webpart
Description: A minimal web part template (no framework) for SPFx
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 23

Template Name: webpart-noframework
Category: webpart
Description: A web part template with no framework (plain TypeScript) for SPFx
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 26

Template Name: webpart-react
Category: webpart
Description: A React-based web part template for SPFx
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 27

targetDir: <TARGET_DIR>

[cyan]The following files will be modified:[default]
[yellow]Modified: .eslintrc.js[default]
[yellow]Modified: .gitignore[default]
[yellow]Modified: .npmignore[default]
[yellow]Modified: .vscode/launch.json[default]
[yellow]Modified: .vscode/settings.json[default]
[yellow]Modified: README.md[default]
[yellow]Modified: config/config.json[default]
[yellow]Modified: config/deploy-azure-storage.json[default]
[yellow]Modified: config/package-solution.json[default]
[yellow]Modified: config/rig.json[default]
[yellow]Modified: config/sass.json[default]
[yellow]Modified: config/serve.json[default]
[yellow]Modified: config/typescript.json[default]
[yellow]Modified: config/write-manifests.json[default]
[yellow]Modified: package.json[default]
[yellow]Modified: src/adaptiveCardExtensions/minimal/MinimalAdaptiveCardExtension.manifest.json[default]
[yellow]Modified: src/adaptiveCardExtensions/minimal/MinimalAdaptiveCardExtension.ts[default]
[yellow]Modified: src/adaptiveCardExtensions/minimal/MinimalPropertyPane.ts[default]
[yellow]Modified: src/adaptiveCardExtensions/minimal/assets/MicrosoftLogo.png[default]
[yellow]Modified: src/adaptiveCardExtensions/minimal/cardView/CardView.ts[default]
[yellow]Modified: src/adaptiveCardExtensions/minimal/loc/en-us.js[default]
[yellow]Modified: src/adaptiveCardExtensions/minimal/loc/mystring.d.ts[default]
[yellow]Modified: src/adaptiveCardExtensions/minimal/quickView/QuickView.ts[default]
[yellow]Modified: src/adaptiveCardExtensions/minimal/quickView/template/QuickViewTemplate.json[default]
[yellow]Modified: tsconfig.json[default]

"
`;

exports[`SPFx Template Scaffolding Template scaffolding and comparison should scaffold extension-application-customizer template and match example output: stdout 1`] = `
"Adding local template source: <LOCAL_TEMPLATE_PATH>
# of templates: 17
Template Name: ace-data-visualization
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Data Visualization
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-generic-card
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Generic Card Template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-generic-image-card
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Image Card Template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-generic-primarytext-card
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Primary Text Card Template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-search-card
Category: ace
Description: Adaptive Card Extension with Search Card template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: extension-application-customizer
Category: extension
Description: A SharePoint Framework Application Customizer extension template
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 22

Template Name: extension-fieldcustomizer-minimal
Category: extension
Description: A minimal Field Customizer extension for SharePoint Framework without any framework dependencies
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 22

Template Name: extension-fieldcustomizer-noframework
Category: extension
Description: A SharePoint Framework field customizer extension with no framework
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 22

Template Name: extension-fieldcustomizer-react
Category: extension
Description: SharePoint Framework Field Customizer extension with React framework
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 23

Template Name: extension-formcustomizer-noframework
Category: extension
Description: A SharePoint Framework Form Customizer extension with no framework
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 21

Template Name: extension-formcustomizer-react
Category: extension
Description: A SharePoint Framework Form Customizer extension with React
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 20

Template Name: extension-listviewcommandset
Category: extension
Description: SharePoint Framework list view command set extension template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 24

Template Name: extension-search-query-modifier
Category: extension
Description: A SharePoint Framework search query modifier extension
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 22

Template Name: library
Category: library
Description: A SharePoint Framework Library Component
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 21

Template Name: webpart-minimal
Category: webpart
Description: A minimal web part template (no framework) for SPFx
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 23

Template Name: webpart-noframework
Category: webpart
Description: A web part template with no framework (plain TypeScript) for SPFx
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 26

Template Name: webpart-react
Category: webpart
Description: A React-based web part template for SPFx
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 27

targetDir: <TARGET_DIR>

[cyan]The following files will be modified:[default]
[yellow]Modified: .eslintrc.js[default]
[yellow]Modified: .gitignore[default]
[yellow]Modified: .npmignore[default]
[yellow]Modified: .vscode/launch.json[default]
[yellow]Modified: .vscode/settings.json[default]
[yellow]Modified: README.md[default]
[yellow]Modified: config/config.json[default]
[yellow]Modified: config/deploy-azure-storage.json[default]
[yellow]Modified: config/package-solution.json[default]
[yellow]Modified: config/rig.json[default]
[yellow]Modified: config/sass.json[default]
[yellow]Modified: config/serve.json[default]
[yellow]Modified: config/typescript.json[default]
[yellow]Modified: config/write-manifests.json[default]
[yellow]Modified: package.json[default]
[yellow]Modified: sharepoint/assets/ClientSideInstance.xml[default]
[yellow]Modified: sharepoint/assets/elements.xml[default]
[yellow]Modified: src/extensions/minimalApplicationCustomizer/MinimalApplicationCustomizer.manifest.json[default]
[yellow]Modified: src/extensions/minimalApplicationCustomizer/MinimalApplicationCustomizer.ts[default]
[yellow]Modified: src/extensions/minimalApplicationCustomizer/loc/en-us.js[default]
[yellow]Modified: src/extensions/minimalApplicationCustomizer/loc/minimalApplicationCustomizerStrings.d.ts[default]
[yellow]Modified: tsconfig.json[default]

"
`;

exports[`SPFx Template Scaffolding Template scaffolding and comparison should scaffold extension-fieldcustomizer-minimal template and match example output: stdout 1`] = `
"Adding local template source: <LOCAL_TEMPLATE_PATH>
# of templates: 17
Template Name: ace-data-visualization
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Data Visualization
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-generic-card
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Generic Card Template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-generic-image-card
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Image Card Template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-generic-primarytext-card
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Primary Text Card Template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-search-card
Category: ace
Description: Adaptive Card Extension with Search Card template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: extension-application-customizer
Category: extension
Description: A SharePoint Framework Application Customizer extension template
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 22

Template Name: extension-fieldcustomizer-minimal
Category: extension
Description: A minimal Field Customizer extension for SharePoint Framework without any framework dependencies
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 22

Template Name: extension-fieldcustomizer-noframework
Category: extension
Description: A SharePoint Framework field customizer extension with no framework
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 22

Template Name: extension-fieldcustomizer-react
Category: extension
Description: SharePoint Framework Field Customizer extension with React framework
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 23

Template Name: extension-formcustomizer-noframework
Category: extension
Description: A SharePoint Framework Form Customizer extension with no framework
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 21

Template Name: extension-formcustomizer-react
Category: extension
Description: A SharePoint Framework Form Customizer extension with React
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 20

Template Name: extension-listviewcommandset
Category: extension
Description: SharePoint Framework list view command set extension template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 24

Template Name: extension-search-query-modifier
Category: extension
Description: A SharePoint Framework search query modifier extension
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 22

Template Name: library
Category: library
Description: A SharePoint Framework Library Component
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 21

Template Name: webpart-minimal
Category: webpart
Description: A minimal web part template (no framework) for SPFx
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 23

Template Name: webpart-noframework
Category: webpart
Description: A web part template with no framework (plain TypeScript) for SPFx
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 26

Template Name: webpart-react
Category: webpart
Description: A React-based web part template for SPFx
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 27

targetDir: <TARGET_DIR>

[cyan]The following files will be modified:[default]
[yellow]Modified: .eslintrc.js[default]
[yellow]Modified: .gitignore[default]
[yellow]Modified: .npmignore[default]
[yellow]Modified: .vscode/launch.json[default]
[yellow]Modified: .vscode/settings.json[default]
[yellow]Modified: README.md[default]
[yellow]Modified: config/config.json[default]
[yellow]Modified: config/deploy-azure-storage.json[default]
[yellow]Modified: config/package-solution.json[default]
[yellow]Modified: config/rig.json[default]
[yellow]Modified: config/sass.json[default]
[yellow]Modified: config/serve.json[default]
[yellow]Modified: config/typescript.json[default]
[yellow]Modified: config/write-manifests.json[default]
[yellow]Modified: package.json[default]
[yellow]Modified: sharepoint/assets/elements.xml[default]
[yellow]Modified: src/extensions/minimal/MinimalFieldCustomizer.manifest.json[default]
[yellow]Modified: src/extensions/minimal/MinimalFieldCustomizer.module.scss[default]
[yellow]Modified: src/extensions/minimal/MinimalFieldCustomizer.ts[default]
[yellow]Modified: src/extensions/minimal/loc/en-us.js[default]
[yellow]Modified: src/extensions/minimal/loc/myStrings.d.ts[default]
[yellow]Modified: tsconfig.json[default]

"
`;

exports[`SPFx Template Scaffolding Template scaffolding and comparison should scaffold extension-fieldcustomizer-noframework template and match example output: stdout 1`] = `
"Adding local template source: <LOCAL_TEMPLATE_PATH>
# of templates: 17
Template Name: ace-data-visualization
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Data Visualization
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-generic-card
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Generic Card Template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-generic-image-card
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Image Card Template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-generic-primarytext-card
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Primary Text Card Template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-search-card
Category: ace
Description: Adaptive Card Extension with Search Card template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: extension-application-customizer
Category: extension
Description: A SharePoint Framework Application Customizer extension template
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 22

Template Name: extension-fieldcustomizer-minimal
Category: extension
Description: A minimal Field Customizer extension for SharePoint Framework without any framework dependencies
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 22

Template Name: extension-fieldcustomizer-noframework
Category: extension
Description: A SharePoint Framework field customizer extension with no framework
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 22

Template Name: extension-fieldcustomizer-react
Category: extension
Description: SharePoint Framework Field Customizer extension with React framework
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 23

Template Name: extension-formcustomizer-noframework
Category: extension
Description: A SharePoint Framework Form Customizer extension with no framework
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 21

Template Name: extension-formcustomizer-react
Category: extension
Description: A SharePoint Framework Form Customizer extension with React
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 20

Template Name: extension-listviewcommandset
Category: extension
Description: SharePoint Framework list view command set extension template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 24

Template Name: extension-search-query-modifier
Category: extension
Description: A SharePoint Framework search query modifier extension
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 22

Template Name: library
Category: library
Description: A SharePoint Framework Library Component
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 21

Template Name: webpart-minimal
Category: webpart
Description: A minimal web part template (no framework) for SPFx
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 23

Template Name: webpart-noframework
Category: webpart
Description: A web part template with no framework (plain TypeScript) for SPFx
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 26

Template Name: webpart-react
Category: webpart
Description: A React-based web part template for SPFx
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 27

targetDir: <TARGET_DIR>

[cyan]The following files will be modified:[default]
[yellow]Modified: .eslintrc.js[default]
[yellow]Modified: .gitignore[default]
[yellow]Modified: .npmignore[default]
[yellow]Modified: .vscode/launch.json[default]
[yellow]Modified: .vscode/settings.json[default]
[yellow]Modified: README.md[default]
[yellow]Modified: config/config.json[default]
[yellow]Modified: config/deploy-azure-storage.json[default]
[yellow]Modified: config/package-solution.json[default]
[yellow]Modified: config/rig.json[default]
[yellow]Modified: config/sass.json[default]
[yellow]Modified: config/serve.json[default]
[yellow]Modified: config/typescript.json[default]
[yellow]Modified: config/write-manifests.json[default]
[yellow]Modified: package.json[default]
[yellow]Modified: sharepoint/assets/elements.xml[default]
[yellow]Modified: src/extensions/noFramework/NoFrameworkFieldCustomizer.manifest.json[default]
[yellow]Modified: src/extensions/noFramework/NoFrameworkFieldCustomizer.module.scss[default]
[yellow]Modified: src/extensions/noFramework/NoFrameworkFieldCustomizer.ts[default]
[yellow]Modified: src/extensions/noFramework/loc/en-us.js[default]
[yellow]Modified: src/extensions/noFramework/loc/myStrings.d.ts[default]
[yellow]Modified: tsconfig.json[default]

"
`;

exports[`SPFx Template Scaffolding Template scaffolding and comparison should scaffold extension-fieldcustomizer-react template and match example output: stdout 1`] = `
"Adding local template source: <LOCAL_TEMPLATE_PATH>
# of templates: 17
Template Name: ace-data-visualization
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Data Visualization
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-generic-card
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Generic Card Template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-generic-image-card
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Image Card Template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-generic-primarytext-card
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Primary Text Card Template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-search-card
Category: ace
Description: Adaptive Card Extension with Search Card template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: extension-application-customizer
Category: extension
Description: A SharePoint Framework Application Customizer extension template
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 22

Template Name: extension-fieldcustomizer-minimal
Category: extension
Description: A minimal Field Customizer extension for SharePoint Framework without any framework dependencies
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 22

Template Name: extension-fieldcustomizer-noframework
Category: extension
Description: A SharePoint Framework field customizer extension with no framework
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 22

Template Name: extension-fieldcustomizer-react
Category: extension
Description: SharePoint Framework Field Customizer extension with React framework
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 23

Template Name: extension-formcustomizer-noframework
Category: extension
Description: A SharePoint Framework Form Customizer extension with no framework
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 21

Template Name: extension-formcustomizer-react
Category: extension
Description: A SharePoint Framework Form Customizer extension with React
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 20

Template Name: extension-listviewcommandset
Category: extension
Description: SharePoint Framework list view command set extension template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 24

Template Name: extension-search-query-modifier
Category: extension
Description: A SharePoint Framework search query modifier extension
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 22

Template Name: library
Category: library
Description: A SharePoint Framework Library Component
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 21

Template Name: webpart-minimal
Category: webpart
Description: A minimal web part template (no framework) for SPFx
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 23

Template Name: webpart-noframework
Category: webpart
Description: A web part template with no framework (plain TypeScript) for SPFx
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 26

Template Name: webpart-react
Category: webpart
Description: A React-based web part template for SPFx
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 27

targetDir: <TARGET_DIR>

[cyan]The following files will be modified:[default]
[yellow]Modified: .eslintrc.js[default]
[yellow]Modified: .gitignore[default]
[yellow]Modified: .npmignore[default]
[yellow]Modified: .vscode/launch.json[default]
[yellow]Modified: .vscode/settings.json[default]
[yellow]Modified: README.md[default]
[yellow]Modified: config/config.json[default]
[yellow]Modified: config/deploy-azure-storage.json[default]
[yellow]Modified: config/package-solution.json[default]
[yellow]Modified: config/rig.json[default]
[yellow]Modified: config/sass.json[default]
[yellow]Modified: config/serve.json[default]
[yellow]Modified: config/typescript.json[default]
[yellow]Modified: config/write-manifests.json[default]
[yellow]Modified: package.json[default]
[yellow]Modified: sharepoint/assets/elements.xml[default]
[yellow]Modified: src/extensions/reactFieldCustomizer/ReactFieldCustomizerFieldCustomizer.manifest.json[default]
[yellow]Modified: src/extensions/reactFieldCustomizer/ReactFieldCustomizerFieldCustomizer.ts[default]
[yellow]Modified: src/extensions/reactFieldCustomizer/components/ReactFieldCustomizer.module.scss[default]
[yellow]Modified: src/extensions/reactFieldCustomizer/components/ReactFieldCustomizer.tsx[default]
[yellow]Modified: src/extensions/reactFieldCustomizer/loc/en-us.js[default]
[yellow]Modified: src/extensions/reactFieldCustomizer/loc/myStrings.d.ts[default]
[yellow]Modified: tsconfig.json[default]

"
`;

exports[`SPFx Template Scaffolding Template scaffolding and comparison should scaffold extension-formcustomizer-noframework template and match example output: stdout 1`] = `
"Adding local template source: <LOCAL_TEMPLATE_PATH>
# of templates: 17
Template Name: ace-data-visualization
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Data Visualization
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-generic-card
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Generic Card Template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-generic-image-card
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Image Card Template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-generic-primarytext-card
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Primary Text Card Template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-search-card
Category: ace
Description: Adaptive Card Extension with Search Card template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: extension-application-customizer
Category: extension
Description: A SharePoint Framework Application Customizer extension template
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 22

Template Name: extension-fieldcustomizer-minimal
Category: extension
Description: A minimal Field Customizer extension for SharePoint Framework without any framework dependencies
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 22

Template Name: extension-fieldcustomizer-noframework
Category: extension
Description: A SharePoint Framework field customizer extension with no framework
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 22

Template Name: extension-fieldcustomizer-react
Category: extension
Description: SharePoint Framework Field Customizer extension with React framework
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 23

Template Name: extension-formcustomizer-noframework
Category: extension
Description: A SharePoint Framework Form Customizer extension with no framework
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 21

Template Name: extension-formcustomizer-react
Category: extension
Description: A SharePoint Framework Form Customizer extension with React
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 20

Template Name: extension-listviewcommandset
Category: extension
Description: SharePoint Framework list view command set extension template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 24

Template Name: extension-search-query-modifier
Category: extension
Description: A SharePoint Framework search query modifier extension
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 22

Template Name: library
Category: library
Description: A SharePoint Framework Library Component
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 21

Template Name: webpart-minimal
Category: webpart
Description: A minimal web part template (no framework) for SPFx
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 23

Template Name: webpart-noframework
Category: webpart
Description: A web part template with no framework (plain TypeScript) for SPFx
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 26

Template Name: webpart-react
Category: webpart
Description: A React-based web part template for SPFx
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 27

targetDir: <TARGET_DIR>

[cyan]The following files will be modified:[default]
[yellow]Modified: .eslintrc.js[default]
[yellow]Modified: .gitignore[default]
[yellow]Modified: .npmignore[default]
[yellow]Modified: .vscode/launch.json[default]
[yellow]Modified: .vscode/settings.json[default]
[yellow]Modified: README.md[default]
[yellow]Modified: config/config.json[default]
[yellow]Modified: config/deploy-azure-storage.json[default]
[yellow]Modified: config/package-solution.json[default]
[yellow]Modified: config/rig.json[default]
[yellow]Modified: config/sass.json[default]
[yellow]Modified: config/serve.json[default]
[yellow]Modified: config/typescript.json[default]
[yellow]Modified: config/write-manifests.json[default]
[yellow]Modified: package.json[default]
[yellow]Modified: src/extensions/noFramework/NoFrameworkFormCustomizer.manifest.json[default]
[yellow]Modified: src/extensions/noFramework/NoFrameworkFormCustomizer.module.scss[default]
[yellow]Modified: src/extensions/noFramework/NoFrameworkFormCustomizer.ts[default]
[yellow]Modified: src/extensions/noFramework/loc/en-us.js[default]
[yellow]Modified: src/extensions/noFramework/loc/myStrings.d.ts[default]
[yellow]Modified: tsconfig.json[default]

"
`;

exports[`SPFx Template Scaffolding Template scaffolding and comparison should scaffold extension-formcustomizer-react template and match example output: stdout 1`] = `
"Adding local template source: <LOCAL_TEMPLATE_PATH>
# of templates: 17
Template Name: ace-data-visualization
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Data Visualization
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-generic-card
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Generic Card Template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-generic-image-card
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Image Card Template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-generic-primarytext-card
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Primary Text Card Template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-search-card
Category: ace
Description: Adaptive Card Extension with Search Card template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: extension-application-customizer
Category: extension
Description: A SharePoint Framework Application Customizer extension template
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 22

Template Name: extension-fieldcustomizer-minimal
Category: extension
Description: A minimal Field Customizer extension for SharePoint Framework without any framework dependencies
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 22

Template Name: extension-fieldcustomizer-noframework
Category: extension
Description: A SharePoint Framework field customizer extension with no framework
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 22

Template Name: extension-fieldcustomizer-react
Category: extension
Description: SharePoint Framework Field Customizer extension with React framework
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 23

Template Name: extension-formcustomizer-noframework
Category: extension
Description: A SharePoint Framework Form Customizer extension with no framework
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 21

Template Name: extension-formcustomizer-react
Category: extension
Description: A SharePoint Framework Form Customizer extension with React
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 20

Template Name: extension-listviewcommandset
Category: extension
Description: SharePoint Framework list view command set extension template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 24

Template Name: extension-search-query-modifier
Category: extension
Description: A SharePoint Framework search query modifier extension
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 22

Template Name: library
Category: library
Description: A SharePoint Framework Library Component
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 21

Template Name: webpart-minimal
Category: webpart
Description: A minimal web part template (no framework) for SPFx
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 23

Template Name: webpart-noframework
Category: webpart
Description: A web part template with no framework (plain TypeScript) for SPFx
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 26

Template Name: webpart-react
Category: webpart
Description: A React-based web part template for SPFx
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 27

targetDir: <TARGET_DIR>

[cyan]The following files will be modified:[default]
[yellow]Modified: .eslintrc.js[default]
[yellow]Modified: .gitignore[default]
[yellow]Modified: .npmignore[default]
[yellow]Modified: README.md[default]
[yellow]Modified: config/config.json[default]
[yellow]Modified: config/deploy-azure-storage.json[default]
[yellow]Modified: config/package-solution.json[default]
[yellow]Modified: config/rig.json[default]
[yellow]Modified: config/sass.json[default]
[yellow]Modified: config/serve.json[default]
[yellow]Modified: config/typescript.json[default]
[yellow]Modified: config/write-manifests.json[default]
[yellow]Modified: package.json[default]
[yellow]Modified: src/extensions/reactFormCustomizer/ReactFormCustomizerFormCustomizer.manifest.json[default]
[yellow]Modified: src/extensions/reactFormCustomizer/ReactFormCustomizerFormCustomizer.ts[default]
[yellow]Modified: src/extensions/reactFormCustomizer/components/ReactFormCustomizer.module.scss[default]
[yellow]Modified: src/extensions/reactFormCustomizer/components/ReactFormCustomizer.tsx[default]
[yellow]Modified: src/extensions/reactFormCustomizer/loc/en-us.js[default]
[yellow]Modified: src/extensions/reactFormCustomizer/loc/myStrings.d.ts[default]
[yellow]Modified: tsconfig.json[default]

"
`;

exports[`SPFx Template Scaffolding Template scaffolding and comparison should scaffold extension-listviewcommandset template and match example output: stdout 1`] = `
"Adding local template source: <LOCAL_TEMPLATE_PATH>
# of templates: 17
Template Name: ace-data-visualization
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Data Visualization
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-generic-card
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Generic Card Template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-generic-image-card
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Image Card Template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-generic-primarytext-card
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Primary Text Card Template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-search-card
Category: ace
Description: Adaptive Card Extension with Search Card template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: extension-application-customizer
Category: extension
Description: A SharePoint Framework Application Customizer extension template
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 22

Template Name: extension-fieldcustomizer-minimal
Category: extension
Description: A minimal Field Customizer extension for SharePoint Framework without any framework dependencies
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 22

Template Name: extension-fieldcustomizer-noframework
Category: extension
Description: A SharePoint Framework field customizer extension with no framework
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 22

Template Name: extension-fieldcustomizer-react
Category: extension
Description: SharePoint Framework Field Customizer extension with React framework
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 23

Template Name: extension-formcustomizer-noframework
Category: extension
Description: A SharePoint Framework Form Customizer extension with no framework
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 21

Template Name: extension-formcustomizer-react
Category: extension
Description: A SharePoint Framework Form Customizer extension with React
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 20

Template Name: extension-listviewcommandset
Category: extension
Description: SharePoint Framework list view command set extension template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 24

Template Name: extension-search-query-modifier
Category: extension
Description: A SharePoint Framework search query modifier extension
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 22

Template Name: library
Category: library
Description: A SharePoint Framework Library Component
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 21

Template Name: webpart-minimal
Category: webpart
Description: A minimal web part template (no framework) for SPFx
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 23

Template Name: webpart-noframework
Category: webpart
Description: A web part template with no framework (plain TypeScript) for SPFx
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 26

Template Name: webpart-react
Category: webpart
Description: A React-based web part template for SPFx
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 27

targetDir: <TARGET_DIR>

[cyan]The following files will be modified:[default]
[yellow]Modified: .eslintrc.js[default]
[yellow]Modified: .gitignore[default]
[yellow]Modified: .npmignore[default]
[yellow]Modified: .vscode/launch.json[default]
[yellow]Modified: .vscode/settings.json[default]
[yellow]Modified: README.md[default]
[yellow]Modified: config/config.json[default]
[yellow]Modified: config/deploy-azure-storage.json[default]
[yellow]Modified: config/package-solution.json[default]
[yellow]Modified: config/rig.json[default]
[yellow]Modified: config/sass.json[default]
[yellow]Modified: config/serve.json[default]
[yellow]Modified: config/typescript.json[default]
[yellow]Modified: config/write-manifests.json[default]
[yellow]Modified: package.json[default]
[yellow]Modified: sharepoint/assets/ClientSideInstance.xml[default]
[yellow]Modified: sharepoint/assets/elements.xml[default]
[yellow]Modified: src/extensions/minimalCommandSet/MinimalCommandSet.manifest.json[default]
[yellow]Modified: src/extensions/minimalCommandSet/MinimalCommandSet.ts[default]
[yellow]Modified: src/extensions/minimalCommandSet/icons/cancel.png[default]
[yellow]Modified: src/extensions/minimalCommandSet/icons/request.png[default]
[yellow]Modified: src/extensions/minimalCommandSet/loc/en-us.js[default]
[yellow]Modified: src/extensions/minimalCommandSet/loc/minimalCommandSetStrings.d.ts[default]
[yellow]Modified: tsconfig.json[default]

"
`;

exports[`SPFx Template Scaffolding Template scaffolding and comparison should scaffold extension-search-query-modifier template and match example output: stdout 1`] = `
"Adding local template source: <LOCAL_TEMPLATE_PATH>
# of templates: 17
Template Name: ace-data-visualization
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Data Visualization
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-generic-card
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Generic Card Template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-generic-image-card
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Image Card Template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-generic-primarytext-card
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Primary Text Card Template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-search-card
Category: ace
Description: Adaptive Card Extension with Search Card template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: extension-application-customizer
Category: extension
Description: A SharePoint Framework Application Customizer extension template
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 22

Template Name: extension-fieldcustomizer-minimal
Category: extension
Description: A minimal Field Customizer extension for SharePoint Framework without any framework dependencies
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 22

Template Name: extension-fieldcustomizer-noframework
Category: extension
Description: A SharePoint Framework field customizer extension with no framework
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 22

Template Name: extension-fieldcustomizer-react
Category: extension
Description: SharePoint Framework Field Customizer extension with React framework
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 23

Template Name: extension-formcustomizer-noframework
Category: extension
Description: A SharePoint Framework Form Customizer extension with no framework
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 21

Template Name: extension-formcustomizer-react
Category: extension
Description: A SharePoint Framework Form Customizer extension with React
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 20

Template Name: extension-listviewcommandset
Category: extension
Description: SharePoint Framework list view command set extension template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 24

Template Name: extension-search-query-modifier
Category: extension
Description: A SharePoint Framework search query modifier extension
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 22

Template Name: library
Category: library
Description: A SharePoint Framework Library Component
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 21

Template Name: webpart-minimal
Category: webpart
Description: A minimal web part template (no framework) for SPFx
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 23

Template Name: webpart-noframework
Category: webpart
Description: A web part template with no framework (plain TypeScript) for SPFx
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 26

Template Name: webpart-react
Category: webpart
Description: A React-based web part template for SPFx
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 27

targetDir: <TARGET_DIR>

[cyan]The following files will be modified:[default]
[yellow]Modified: .eslintrc.js[default]
[yellow]Modified: .gitignore[default]
[yellow]Modified: .npmignore[default]
[yellow]Modified: .vscode/launch.json[default]
[yellow]Modified: .vscode/settings.json[default]
[yellow]Modified: README.md[default]
[yellow]Modified: config/config.json[default]
[yellow]Modified: config/deploy-azure-storage.json[default]
[yellow]Modified: config/package-solution.json[default]
[yellow]Modified: config/rig.json[default]
[yellow]Modified: config/sass.json[default]
[yellow]Modified: config/serve.json[default]
[yellow]Modified: config/typescript.json[default]
[yellow]Modified: config/write-manifests.json[default]
[yellow]Modified: package.json[default]
[yellow]Modified: sharepoint/assets/ClientSideInstance.xml[default]
[yellow]Modified: sharepoint/assets/elements.xml[default]
[yellow]Modified: src/extensions/minimalSearchQueryModifier/MinimalSearchQueryModifier.manifest.json[default]
[yellow]Modified: src/extensions/minimalSearchQueryModifier/MinimalSearchQueryModifier.ts[default]
[yellow]Modified: src/extensions/minimalSearchQueryModifier/loc/en-us.js[default]
[yellow]Modified: src/extensions/minimalSearchQueryModifier/loc/minimalSearchQueryModifierStrings.d.ts[default]
[yellow]Modified: tsconfig.json[default]

"
`;

exports[`SPFx Template Scaffolding Template scaffolding and comparison should scaffold library template and match example output: stdout 1`] = `
"Adding local template source: <LOCAL_TEMPLATE_PATH>
# of templates: 17
Template Name: ace-data-visualization
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Data Visualization
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-generic-card
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Generic Card Template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-generic-image-card
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Image Card Template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-generic-primarytext-card
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Primary Text Card Template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-search-card
Category: ace
Description: Adaptive Card Extension with Search Card template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: extension-application-customizer
Category: extension
Description: A SharePoint Framework Application Customizer extension template
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 22

Template Name: extension-fieldcustomizer-minimal
Category: extension
Description: A minimal Field Customizer extension for SharePoint Framework without any framework dependencies
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 22

Template Name: extension-fieldcustomizer-noframework
Category: extension
Description: A SharePoint Framework field customizer extension with no framework
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 22

Template Name: extension-fieldcustomizer-react
Category: extension
Description: SharePoint Framework Field Customizer extension with React framework
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 23

Template Name: extension-formcustomizer-noframework
Category: extension
Description: A SharePoint Framework Form Customizer extension with no framework
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 21

Template Name: extension-formcustomizer-react
Category: extension
Description: A SharePoint Framework Form Customizer extension with React
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 20

Template Name: extension-listviewcommandset
Category: extension
Description: SharePoint Framework list view command set extension template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 24

Template Name: extension-search-query-modifier
Category: extension
Description: A SharePoint Framework search query modifier extension
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 22

Template Name: library
Category: library
Description: A SharePoint Framework Library Component
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 21

Template Name: webpart-minimal
Category: webpart
Description: A minimal web part template (no framework) for SPFx
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 23

Template Name: webpart-noframework
Category: webpart
Description: A web part template with no framework (plain TypeScript) for SPFx
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 26

Template Name: webpart-react
Category: webpart
Description: A React-based web part template for SPFx
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 27

targetDir: <TARGET_DIR>

[cyan]The following files will be modified:[default]
[yellow]Modified: .eslintrc.js[default]
[yellow]Modified: .gitignore[default]
[yellow]Modified: .npmignore[default]
[yellow]Modified: .vscode/launch.json[default]
[yellow]Modified: .vscode/settings.json[default]
[yellow]Modified: README.md[default]
[yellow]Modified: config/config.json[default]
[yellow]Modified: config/deploy-azure-storage.json[default]
[yellow]Modified: config/package-solution.json[default]
[yellow]Modified: config/rig.json[default]
[yellow]Modified: config/sass.json[default]
[yellow]Modified: config/serve.json[default]
[yellow]Modified: config/typescript.json[default]
[yellow]Modified: config/write-manifests.json[default]
[yellow]Modified: package.json[default]
[yellow]Modified: src/index.ts[default]
[yellow]Modified: src/libraries/example/ExampleLibrary.manifest.json[default]
[yellow]Modified: src/libraries/example/ExampleLibrary.ts[default]
[yellow]Modified: src/libraries/example/loc/en-us.js[default]
[yellow]Modified: src/libraries/example/loc/mystrings.d.ts[default]
[yellow]Modified: tsconfig.json[default]

"
`;

exports[`SPFx Template Scaffolding Template scaffolding and comparison should scaffold test template and match example output: stdout 1`] = `
"Adding local template source: <LOCAL_TEMPLATE_PATH>
# of templates: 1
Template Name: test
Category: webpart
Description: A test template for SPFx
Version: 0.0.1
SPFx Version: 1.22.0
Number of Files: 1

targetDir: <TARGET_DIR>

[cyan]The following files will be modified:[default]
[yellow]Modified: hello_world.md[default]

"
`;

exports[`SPFx Template Scaffolding Template scaffolding and comparison should scaffold webpart-minimal template and match example output: stdout 1`] = `
"Adding local template source: <LOCAL_TEMPLATE_PATH>
# of templates: 17
Template Name: ace-data-visualization
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Data Visualization
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-generic-card
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Generic Card Template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-generic-image-card
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Image Card Template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-generic-primarytext-card
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Primary Text Card Template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-search-card
Category: ace
Description: Adaptive Card Extension with Search Card template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: extension-application-customizer
Category: extension
Description: A SharePoint Framework Application Customizer extension template
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 22

Template Name: extension-fieldcustomizer-minimal
Category: extension
Description: A minimal Field Customizer extension for SharePoint Framework without any framework dependencies
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 22

Template Name: extension-fieldcustomizer-noframework
Category: extension
Description: A SharePoint Framework field customizer extension with no framework
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 22

Template Name: extension-fieldcustomizer-react
Category: extension
Description: SharePoint Framework Field Customizer extension with React framework
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 23

Template Name: extension-formcustomizer-noframework
Category: extension
Description: A SharePoint Framework Form Customizer extension with no framework
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 21

Template Name: extension-formcustomizer-react
Category: extension
Description: A SharePoint Framework Form Customizer extension with React
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 20

Template Name: extension-listviewcommandset
Category: extension
Description: SharePoint Framework list view command set extension template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 24

Template Name: extension-search-query-modifier
Category: extension
Description: A SharePoint Framework search query modifier extension
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 22

Template Name: library
Category: library
Description: A SharePoint Framework Library Component
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 21

Template Name: webpart-minimal
Category: webpart
Description: A minimal web part template (no framework) for SPFx
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 23

Template Name: webpart-noframework
Category: webpart
Description: A web part template with no framework (plain TypeScript) for SPFx
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 26

Template Name: webpart-react
Category: webpart
Description: A React-based web part template for SPFx
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 27

targetDir: <TARGET_DIR>

[cyan]The following files will be modified:[default]
[yellow]Modified: .eslintrc.js[default]
[yellow]Modified: .gitignore[default]
[yellow]Modified: .npmignore[default]
[yellow]Modified: .vscode/launch.json[default]
[yellow]Modified: .vscode/settings.json[default]
[yellow]Modified: README.md[default]
[yellow]Modified: config/config.json[default]
[yellow]Modified: config/deploy-azure-storage.json[default]
[yellow]Modified: config/package-solution.json[default]
[yellow]Modified: config/rig.json[default]
[yellow]Modified: config/sass.json[default]
[yellow]Modified: config/serve.json[default]
[yellow]Modified: config/typescript.json[default]
[yellow]Modified: config/write-manifests.json[default]
[yellow]Modified: package.json[default]
[yellow]Modified: src/webparts/minimalWebPart/MinimalWebPart.manifest.json[default]
[yellow]Modified: src/webparts/minimalWebPart/MinimalWebPart.module.scss[default]
[yellow]Modified: src/webparts/minimalWebPart/MinimalWebPart.ts[default]
[yellow]Modified: src/webparts/minimalWebPart/loc/en-us.js[default]
[yellow]Modified: src/webparts/minimalWebPart/loc/minimalWebPartStrings.d.ts[default]
[yellow]Modified: teams/838638c8-36e9-53b5-a8c3-37a22b55fa22_color.png[default]
[yellow]Modified: teams/838638c8-36e9-53b5-a8c3-37a22b55fa22_outline.png[default]
[yellow]Modified: tsconfig.json[default]

"
`;

exports[`SPFx Template Scaffolding Template scaffolding and comparison should scaffold webpart-noframework template and match example output: stdout 1`] = `
"Adding local template source: <LOCAL_TEMPLATE_PATH>
# of templates: 17
Template Name: ace-data-visualization
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Data Visualization
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-generic-card
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Generic Card Template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-generic-image-card
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Image Card Template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-generic-primarytext-card
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Primary Text Card Template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-search-card
Category: ace
Description: Adaptive Card Extension with Search Card template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: extension-application-customizer
Category: extension
Description: A SharePoint Framework Application Customizer extension template
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 22

Template Name: extension-fieldcustomizer-minimal
Category: extension
Description: A minimal Field Customizer extension for SharePoint Framework without any framework dependencies
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 22

Template Name: extension-fieldcustomizer-noframework
Category: extension
Description: A SharePoint Framework field customizer extension with no framework
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 22

Template Name: extension-fieldcustomizer-react
Category: extension
Description: SharePoint Framework Field Customizer extension with React framework
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 23

Template Name: extension-formcustomizer-noframework
Category: extension
Description: A SharePoint Framework Form Customizer extension with no framework
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 21

Template Name: extension-formcustomizer-react
Category: extension
Description: A SharePoint Framework Form Customizer extension with React
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 20

Template Name: extension-listviewcommandset
Category: extension
Description: SharePoint Framework list view command set extension template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 24

Template Name: extension-search-query-modifier
Category: extension
Description: A SharePoint Framework search query modifier extension
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 22

Template Name: library
Category: library
Description: A SharePoint Framework Library Component
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 21

Template Name: webpart-minimal
Category: webpart
Description: A minimal web part template (no framework) for SPFx
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 23

Template Name: webpart-noframework
Category: webpart
Description: A web part template with no framework (plain TypeScript) for SPFx
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 26

Template Name: webpart-react
Category: webpart
Description: A React-based web part template for SPFx
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 27

targetDir: <TARGET_DIR>

[cyan]The following files will be modified:[default]
[yellow]Modified: .eslintrc.js[default]
[yellow]Modified: .gitignore[default]
[yellow]Modified: .npmignore[default]
[yellow]Modified: .vscode/launch.json[default]
[yellow]Modified: .vscode/settings.json[default]
[yellow]Modified: README.md[default]
[yellow]Modified: config/config.json[default]
[yellow]Modified: config/deploy-azure-storage.json[default]
[yellow]Modified: config/package-solution.json[default]
[yellow]Modified: config/rig.json[default]
[yellow]Modified: config/sass.json[default]
[yellow]Modified: config/serve.json[default]
[yellow]Modified: config/typescript.json[default]
[yellow]Modified: config/write-manifests.json[default]
[yellow]Modified: package.json[default]
[yellow]Modified: src/webparts/noFrameworkWebPart/NoFrameworkWebPart.manifest.json[default]
[yellow]Modified: src/webparts/noFrameworkWebPart/NoFrameworkWebPart.module.scss[default]
[yellow]Modified: src/webparts/noFrameworkWebPart/NoFrameworkWebPart.ts[default]
[yellow]Modified: src/webparts/noFrameworkWebPart/assets/welcome-dark.png[default]
[yellow]Modified: src/webparts/noFrameworkWebPart/assets/welcome-light.png[default]
[yellow]Modified: src/webparts/noFrameworkWebPart/images.d.ts[default]
[yellow]Modified: src/webparts/noFrameworkWebPart/loc/en-us.js[default]
[yellow]Modified: src/webparts/noFrameworkWebPart/loc/noFrameworkWebPartStrings.d.ts[default]
[yellow]Modified: teams/883e8d4f-7073-52ba-a991-5970ff009391_color.png[default]
[yellow]Modified: teams/883e8d4f-7073-52ba-a991-5970ff009391_outline.png[default]
[yellow]Modified: tsconfig.json[default]

"
`;

exports[`SPFx Template Scaffolding Template scaffolding and comparison should scaffold webpart-react template and match example output: stdout 1`] = `
"Adding local template source: <LOCAL_TEMPLATE_PATH>
# of templates: 17
Template Name: ace-data-visualization
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Data Visualization
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-generic-card
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Generic Card Template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-generic-image-card
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Image Card Template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-generic-primarytext-card
Category: ace
Description: A SharePoint Framework Adaptive Card Extension with Primary Text Card Template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: ace-search-card
Category: ace
Description: Adaptive Card Extension with Search Card template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 25

Template Name: extension-application-customizer
Category: extension
Description: A SharePoint Framework Application Customizer extension template
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 22

Template Name: extension-fieldcustomizer-minimal
Category: extension
Description: A minimal Field Customizer extension for SharePoint Framework without any framework dependencies
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 22

Template Name: extension-fieldcustomizer-noframework
Category: extension
Description: A SharePoint Framework field customizer extension with no framework
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 22

Template Name: extension-fieldcustomizer-react
Category: extension
Description: SharePoint Framework Field Customizer extension with React framework
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 23

Template Name: extension-formcustomizer-noframework
Category: extension
Description: A SharePoint Framework Form Customizer extension with no framework
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 21

Template Name: extension-formcustomizer-react
Category: extension
Description: A SharePoint Framework Form Customizer extension with React
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 20

Template Name: extension-listviewcommandset
Category: extension
Description: SharePoint Framework list view command set extension template
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 24

Template Name: extension-search-query-modifier
Category: extension
Description: A SharePoint Framework search query modifier extension
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 22

Template Name: library
Category: library
Description: A SharePoint Framework Library Component
Version: 1.0.0
SPFx Version: 1.22.2
Number of Files: 21

Template Name: webpart-minimal
Category: webpart
Description: A minimal web part template (no framework) for SPFx
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 23

Template Name: webpart-noframework
Category: webpart
Description: A web part template with no framework (plain TypeScript) for SPFx
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 26

Template Name: webpart-react
Category: webpart
Description: A React-based web part template for SPFx
Version: 0.0.1
SPFx Version: 1.22.2
Number of Files: 27

targetDir: <TARGET_DIR>

[cyan]The following files will be modified:[default]
[yellow]Modified: .eslintrc.js[default]
[yellow]Modified: .gitignore[default]
[yellow]Modified: .npmignore[default]
[yellow]Modified: .vscode/launch.json[default]
[yellow]Modified: .vscode/settings.json[default]
[yellow]Modified: README.md[default]
[yellow]Modified: config/config.json[default]
[yellow]Modified: config/deploy-azure-storage.json[default]
[yellow]Modified: config/package-solution.json[default]
[yellow]Modified: config/rig.json[default]
[yellow]Modified: config/sass.json[default]
[yellow]Modified: config/serve.json[default]
[yellow]Modified: config/typescript.json[default]
[yellow]Modified: config/write-manifests.json[default]
[yellow]Modified: package.json[default]
[yellow]Modified: src/webparts/minimalWebPart/MinimalWebPart.manifest.json[default]
[yellow]Modified: src/webparts/minimalWebPart/MinimalWebPart.ts[default]
[yellow]Modified: src/webparts/minimalWebPart/assets/welcome-dark.png[default]
[yellow]Modified: src/webparts/minimalWebPart/assets/welcome-light.png[default]
[yellow]Modified: src/webparts/minimalWebPart/components/IMinimalProps.ts[default]
[yellow]Modified: src/webparts/minimalWebPart/components/Minimal.module.scss[default]
[yellow]Modified: src/webparts/minimalWebPart/components/Minimal.tsx[default]
[yellow]Modified: src/webparts/minimalWebPart/loc/en-us.js[default]
[yellow]Modified: src/webparts/minimalWebPart/loc/minimalWebPartStrings.d.ts[default]
[yellow]Modified: teams/838638c8-36e9-53b5-a8c3-37a22b55fa22_color.png[default]
[yellow]Modified: teams/838638c8-36e9-53b5-a8c3-37a22b55fa22_outline.png[default]
[yellow]Modified: tsconfig.json[default]

"
`;
